--- a/testing/HumiditySensorR/.cproject
+++ b/testing/HumiditySensorR/.cproject
@@ -89,4 +89,5 @@
 	<storageModule moduleId="scannerConfiguration">
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 	</storageModule>
+	<storageModule moduleId="refreshScope"/>
 </cproject>
