--- a/testing_displays/.project
+++ b/testing_displays/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>claqueta_nano</name>
+	<name>testing_displays</name>
 	<comment></comment>
 	<projects>
 	</projects>
